Update example resume path in .env.example

--- a/hr-outreach-automation/.env.example
+++ b/hr-outreach-automation/.env.example
@@ -8,4 +8,4 @@ SMTP_SENDER_EMAIL=
 DAILY_EMAIL_LIMIT=40
 COMPANY_SOURCE_COUNTRY=USA
 EMAIL_LOG_PATH=data/sent_logs.csv
-RESUME_PATH=resumes/candidate_resume.pdf
+RESUME_PATH=resumes/Narayan Rao Full Stack Developer.docx
