Use proper MIME types for attachments

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-SMTP_HOST=
+SMTP_HOST=smtp.example.com
 SMTP_PORT=587
-SMTP_USERNAME=
-SMTP_PASSWORD=
-SMTP_SENDER_NAME=
-SMTP_SENDER_EMAIL=
+SMTP_USERNAME=your-smtp-username
+SMTP_PASSWORD=your-smtp-password
+SMTP_SENDER_NAME=Candidate Name
+SMTP_SENDER_EMAIL=candidate@example.com
 DAILY_EMAIL_LIMIT=40
 COMPANY_SOURCE_COUNTRY=USA
 EMAIL_LOG_PATH=data/sent_logs.csv
