--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_USERNAME=your-smtp-username
-SMTP_PASSWORD=your-smtp-password
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USERNAME=
+SMTP_PASSWORD=
 SMTP_SENDER_NAME=Candidate Name
 SMTP_SENDER_EMAIL=candidate@example.com
 DAILY_EMAIL_LIMIT=40
