Update email configuration and add no-network mode for local testing

--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
-SMTP_USERNAME=
-SMTP_PASSWORD=
-SMTP_SENDER_NAME=Candidate Name
-SMTP_SENDER_EMAIL=candidate@example.com
+SMTP_USERNAME=mahendrakaarnarayan@gmail.com
+SMTP_PASSWORD=MOM@dad143
+SMTP_SENDER_NAME=Narayana Rao
+SMTP_SENDER_EMAIL=mahendrakaarnarayan@gmail.com
 DAILY_EMAIL_LIMIT=40
 COMPANY_SOURCE_COUNTRY=USA
 EMAIL_LOG_PATH=data/sent_logs.csv
-RESUME_PATH=resumes/candidate_resume.pdf
-CANDIDATE_NAME=Candidate Name
-CANDIDATE_EMAIL=candidate@example.com
+RESUME_PATH=resumes/Narayan_Rao_Full_Stack_Developer.docx
+CANDIDATE_NAME=Narayana Rao
+CANDIDATE_EMAIL=mahendrakaarnarayan@gmail.com
 CANDIDATE_PROFILE=Relevant experience and skills
